objects/Stationn__c.object
<CustomObject>
    <description>Sample station test</description>
    <fields>
        <fullName>Active_Station__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Station</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cable_Provider__c</fullName>
        <description>Cable Provider</description>
        <inlineHelpText>Cable Provider</inlineHelpText>
        <label>Cable Provider</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Verizon fios</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Letters__c</fullName>
        <externalId>true</externalId>
        <label>Owner Call Letters</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Owner__c</fullName>
        <label>Group Owner</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>Markett__r.Name &amp; &quot; - &quot; &amp;  Nielsen_Call_Letters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market + Unique Station</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Markett_Call_Letters__c</fullName>
        <formula>Markett__r.Name + &quot; - &quot; +  Call_Letters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Markett + Call Letters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Markett_HH__c</fullName>
        <formula>Markett__r.TV_Homes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Markett - HH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Markett_Rank__c</fullName>
        <formula>Markett__r.DMA_Rank__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Markett Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Markett_US__c</fullName>
        <formula>Markett__r.Homes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Markett - US HH%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Markett__c</fullName>
        <description>Stationns Markett</description>
        <inlineHelpText>Stationns Markett</inlineHelpText>
        <label>Markett</label>
        <referenceTo>Markett__c</referenceTo>
        <relationshipLabel>Stationns</relationshipLabel>
        <relationshipName>Stationns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Nielsen_Call_Letters__c</fullName>
        <externalId>true</externalId>
        <label>Nielsen Call Letters</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTA__c</fullName>
        <label>OTA Channel Position</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Station__c</fullName>
        <label>Primary Station</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station_Affiliate__c</fullName>
        <label>Station Affiliate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station_Alias__c</fullName>
        <label>Station Alias</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stationn_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stationn Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Stationn</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Primary_Station__c</columns>
        <columns>Call_Letters__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Stationn Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stationns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>